feat: update tsconfig for improved module resolution and path mapping
feat: add Button component with customizable styles and accessibility features

feat: implement Layout and RootLayout components for theme management

feat: create ListProducts component for rendering a list of items

feat: add ThemeProvider for managing theme state and context

feat: export components, hooks, themes, and types from index file

feat: define layout types for theme and layout components

feat: implement light and dark themes with customizable properties

feat: create useTheme hook for accessing theme context

feat: add useFetch hook for simplified API requests

chore: initialize share-types package with product and server response models

feat: define IProduct interface for product metadata

feat: create IDbResult interface for standardized server responses

chore: configure TypeScript for share-types package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,19 +5,21 @@
 		// "rootDir": "./src",
 		// "outDir": "./dist",
 
-		// Environment Settings
-		// See also https://aka.ms/tsconfig/module
-		"target": "ESNext",
 		"module": "NodeNext",
-		// For nodejs:
-		"lib": ["esnext"],
-		"types": ["node"],
-		// and npm install -D @types/node
-
+		"moduleResolution": "NodeNext",
+		"target": "ES2022",
 		// Other Outputs
 		"sourceMap": true,
 		"declaration": true,
 		"declarationMap": true,
+
+		"baseUrl": ".",
+		"paths": {
+			"@shared-types/*": ["packages/shared-types/src/*"],
+			"@design-tokens/*": ["packages/design-tokens/src/*"],
+			"@ui-components/*": ["packages/ui-components/src/*"],
+			"@/*": ["src/*"]
+		},
 
 		// Stricter Typechecking Options
 		"noUncheckedIndexedAccess": true,
@@ -40,12 +42,6 @@
 		"moduleDetection": "force",
 		"skipLibCheck": true
 	},
-	"include": [
-		"packages/**/*.ts",
-		"packages/**/*.tsx",
-		"apps/**/*.ts",
-		"apps/**/*.tsx",
-		"tools/**/*.ts"
-	],
+	"include": ["packages/**/*.ts", "packages/**/*.tsx", "apps/**/*.ts", "apps/**/*.tsx"],
 	"exclude": ["node_modules", "dist", "**/node_modules", "**/dist"]
 }
