update latest items onf web

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,10 @@
 		// File Layout
 		// "rootDir": "./src",
 		// "outDir": "./dist",
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["apps/web/src/*", "packages/*/src/*"]
+		},
 
 		"module": "NodeNext",
 		"moduleResolution": "NodeNext",
@@ -12,14 +16,6 @@
 		"sourceMap": true,
 		"declaration": true,
 		"declarationMap": true,
-
-		"baseUrl": ".",
-		"paths": {
-			"@shared-types/*": ["packages/shared-types/src/*"],
-			"@design-tokens/*": ["packages/design-tokens/src/*"],
-			"@ui-components/*": ["packages/ui-components/src/*"],
-			"@/*": ["src/*"]
-		},
 
 		// Stricter Typechecking Options
 		"noUncheckedIndexedAccess": true,
