--- a/packages/share-types/package.json
+++ b/packages/share-types/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "lint": "eslint .",
     "build": "tsc -p tsconfig.build.json",
-    "dev": "tsc -p tsconfig.build.json --watch --preserveWatchOutput"
+    "dev": "tsc -p tsconfig.build.json "
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
