fix: update path mapping in tsconfig to remove unnecessary package paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		// "outDir": "./dist",
 		"baseUrl": ".",
 		"paths": {
-			"@/*": ["apps/web/src/*", "packages/*/src/*"]
+			"@/*": ["apps/web/src/*"]
 		},
 
 		"module": "NodeNext",
