feat: enhance product management with error handling and add imageUrl support feat: add ESLint configuration for TypeScript support chore: update package.json to include typescript-eslint dependency fix: update module and moduleResolution settings in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
 	// Visit https://aka.ms/tsconfig to read more about this file
 	"compilerOptions": {
 		"target": "ESNext",
-		"module": "ESNext",
-		"moduleResolution": "Bundler",
+		"module": "NodeNext",
+		"moduleResolution": "NodeNext",
 		"noEmit": true,
 		"noImplicitAny": true,
 		"allowJs": true,
