--- a/packages/share-types/tsconfig.build.json
+++ b/packages/share-types/tsconfig.build.json
@@ -1,17 +1,11 @@
 {
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
+		"declarationMap": true,
 		"noEmit": false,
 		"outDir": "dist",
 		"rootDir": "src",
-		"declaration": true,
-		"declarationMap": true,
-		"composite": true,
-		"skipLibCheck": true,
-		"module": "ESNext",
-		"moduleResolution": "Bundler",
-		"removeComments": true,
-		"sourceMap": true
+		"declaration": true
 	},
 	"include": ["src"]
 }
