feat: update TypeScript configuration for improved declaration generation and module handling

--- a/apps/web/tsconfig.app.json
+++ b/apps/web/tsconfig.app.json
@@ -13,8 +13,12 @@
 		"allowImportingTsExtensions": true,
 		"verbatimModuleSyntax": true,
 		"moduleDetection": "force",
-		"noEmit": true,
+		"emitDeclarationOnly": true,
+		"declaration": true,
+		"declarationMap": true,
+		"outDir": "./node_modules/.tmp",
 		"jsx": "react-jsx",
+		"composite": true,
 
 		/* Linting */
 		"strict": true,
@@ -22,8 +26,7 @@
 		"noUnusedParameters": true,
 		"erasableSyntaxOnly": true,
 		"noFallthroughCasesInSwitch": true,
-		"noUncheckedSideEffectImports": true,
-		"composite": true
+		"noUncheckedSideEffectImports": true
 	},
 	"include": ["src"]
 }
