--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,6 +1,6 @@
 {
-	"extends": "../../tsconfig.json",
+	"compilerOptions": {},
 	"files": [],
-
+	"include": [],
 	"references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }]
 }
