feat: enhance UI component types and improve ListProducts component documentation
- Added shared UI component types for consistent design system usage.
- Updated ListProducts component to use product ID as key for better rendering performance.
- Improved documentation for ListProducts and useTheme hooks for clarity.

--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,10 @@ apps/*/build/
 # Tools build outputs
 tools/*/dist/
 tools/*/build/
+
+
+# Ignore Cursor AI config and rules files
+.cursor/
+.cursor/rules
+.cursor/README.md
+
