feat: integrate Zod for request validation and update TypeScript configurations
- Added Zod for schema validation in product routes to ensure data integrity.
- Updated TypeScript configuration to allow importing TypeScript extensions.
- Refactored server and route files to use TypeScript extensions.
- Enhanced product management with improved error handling and validation feedback.
- Updated package.json files to include Zod as a dependency in relevant packages.

--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -6,7 +6,8 @@
 		"target": "ES2022",
 		"outDir": "./dist",
 		"rootDir": "./src",
-		"noFallthroughCasesInSwitch": true
+		"noFallthroughCasesInSwitch": true,
+		"allowImportingTsExtensions": true
 	},
 	"include": ["src/**/*"],
 	"exclude": ["node_modules", "dist"]
