--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -22,7 +22,8 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
@@ -32,7 +33,6 @@
     "eslint": "^9.37.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "vite": "^7.1.10",
-    "zod": "^4.1.12"
+    "vite": "^7.1.10"
   }
 }
