--- a/apps/server/tsconfig.build.json
+++ b/apps/server/tsconfig.build.json
@@ -1,10 +1,11 @@
 {
-	"extends": "./tsconfig.json",
+	"extends": "../../tsconfig.json",
 	"compilerOptions": {
 		"noEmit": false,
 		"outDir": "dist",
 		"rootDir": "src",
-		"declaration": true
+		"declaration": true,
+		"allowImportingTsExtensions": false // Disable for builds
 	},
 	"include": ["src"]
 }
