--- a/packages/share-types/package.json
+++ b/packages/share-types/package.json
@@ -4,6 +4,13 @@
   "type": "module",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
+    }
+  },
   "scripts": {
     "lint": "eslint .",
     "build": "tsc -p tsconfig.build.json",
@@ -26,6 +33,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "zod": "^3.24.1"
   }
 }
