feat: update TypeScript configuration and enhance product data structure
- Updated TypeScript configuration to use NodeNext module and target ES2022 for improved compatibility.
- Refactored product data structure in products.json to include a new test product entry.
- Changed import statements in server files to use .js extensions for consistency.
- Introduced ListProducts component in the web application for better product rendering.

--- a/apps/server/tsconfig.build.json
+++ b/apps/server/tsconfig.build.json
@@ -5,7 +5,9 @@
 		"outDir": "dist",
 		"rootDir": "src",
 		"declaration": true,
-		"allowImportingTsExtensions": false // Disable for builds
+		"module": "NodeNext",
+		"moduleResolution": "NodeNext",
+		"target": "ES2022"
 	},
 	"include": ["src"]
 }
